# TubeNote

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.vi.md  Tất tần tật về RAG cơ bản trong 20 phút.json  config.yaml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements.txt  run.sh
.streamlit/: config.toml
apps/: cli.py  mcp_cli.py  mcp_server.py  qa.py  stop_services.py  streamlit_app.py
backend/: __init__.py  config.py  config.yaml  main.py
backend/api/: dubbing.py  rag.py  video.py
backend/pipeline/: dubbing.py  qa.py
backend/services/: gpu_runtime.py  hardware.py
backend/tests/: test_caption_reflow.py  test_chapters.py  test_hardware.py  test_omnivoice_reference.py  test_rag_chunker.py  test_run_log.py  test_transcript_whisper.py  test_tts_normalization.py
backend/workers/: jobs.py
chroma_langchain_db/: chroma.sqlite3
docs/: architecture.md  dubbing.md  rag.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/components/: NavLinks.jsx  ThemeToggle.jsx  Transcript.jsx  VideoPlayer.jsx
frontend/lib/: api.js  draft.js
link2slide/: config.py  prompts.py
link2slide/agents/: summarizer.py
link2slide/llm/: __init__.py  anthropic.py  google.py  openai.py
link2slide/mcp/: client.py  server.py
link2slide/tts/: __init__.py  synthesize.py  voices.py
scripts/: measure_vram.py
searxng_config/: settings.yml
tubenote/: __init__.py  config.py  ollama_runtime.py
(+73 files in other folders)
